<resources>
    <string name="app_name">StoFlo</string>
    <string name="prompt_email">邮箱地址</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_SMS_code">短信验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone_number">电话号码无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这片区域不可为空</string>
    <string name="permission_rationale">"需要联系人权限以自动填充邮箱地址"</string>
    <string name="action_sign_up">注册</string>
    <string name="error_invalid_sms">验证码格式不对</string>
    <string name="error_invalid_phone">对不起，您的电话号码可能有误，请重新输入电话号码或者确保信号正常</string>
    <string name="action_request_sms">获取验证码</string>
    <string name="success_phone">短信已发送</string>
    <string name="email">用户名</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="username">用户名</string>
    <string name="error_login_failed">登录失败</string>
    <string name="error_sign_up_failed">注册失败</string>
    <string name="info_nickname">昵称:</string>
    <string name="info_game_store">游戏库</string>
    <string name="create_new_game">开辟新世界</string>
    <string name="info_continue_last">继续上次游戏</string>
    <string name="logout">登出</string>
    <string name="info_chapter_name">章节</string>
    <string name="info_chapter_content">内容</string>
    <string name="info_chapter_background">背景</string>
    <string name="function_add_next_chapters">选择章节</string>
    <string name="info_chapter_content_text">文本</string>
    <string name="info_cancel">取消</string>
    <string name="info_save">保存</string>
    <string name="info_save_next">下一章</string>
    <string name="info_quit">退出</string>
    <string name="error_invalid_chapter_name">章节名不可为空</string>
    <string name="error_invalid_chapter_content">内容不可为空</string>
    <string name="info_key_self_game">self_game</string>
    <string name="info_key_self_game_name">self_game_name</string>
    <string name="info_self_game_current_edit">current_edit</string>
    <string name="info_game_prefix">game_</string>
    <string name="hint_game_name">游戏名</string>
    <string name="hint_game_description">简单描述</string>
    <string name="info_confirm">确认</string>
    <string name="info_cover">封面</string>
    <string name="error_invalid_game_name">游戏名不可为空</string>
    <string name="info_table_game">game</string>
    <string name="info_table_game_name">name</string>
    <string name="info_table_game_description">description</string>
    <string name="success_create_game">创建游戏成功</string>
    <string name="error_create_game_failed">游戏创建失败，请检查游戏名是否为空</string>
    <string name="info_chapter_start_name">start</string>
    <string name="info_table_chapter_title">title</string>
    <string name="info_table_chapter_content">content</string>
    <string name="info_table_chapter_background">background</string>
    <string name="info_table_owner_game">owner_game</string>
    <string name="info_table_chapter_nexts">nexts</string>
    <string name="info_table_current_edit">current_edit</string>
    <string name="info_choose_chapter">选择章节</string>
    <string name="info_new_chapter">新章节</string>
    <string name="info_table_game_chapter_table_name">chapter_table_name</string>
    <string name="error_create_empty_chapter_failed">创建新章节失败</string>
    <string name="error_query_failed">获取章节列表失败</string>
    <string name="error_require_gamelist_failed">游戏列表获取失败，请检查网络连接</string>
    <string name="info_table_game_start_chapter">start_chapter</string>
    <string name="info_intent_game">game</string>
    <string name="info_intent_chapter">chapter</string>
    <string name="error_fetch_game_failed">拉取游戏数据失败，请检查网络连接</string>
    <string name="error_save_background_failed">保存背景图片至服务器失败</string>
    <string name="info_my_game">我的世界</string>
    <string name="info_game_add_new">创建新游戏</string>
    <string name="info_table_user_have_game">have_games</string>
    <string name="info_table_game_cover">cover</string>
    <string name="info_return">返回</string>
    <string name="info_action">动作</string>
    <string name="info_chapter_title">章节名</string>
</resources>
