<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/edit_chapters_container"
        >

        </LinearLayout>
    </HorizontalScrollView>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
    >
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_chapter_content_container"
        >
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/info_chapter_content"
                    android:background="@drawable/story_background_1"
                    android:gravity="top|left"
                    android:id="@+id/chapter_content_edit"
            />
        </android.support.design.widget.TextInputLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_chapter_background"
                android:gravity="center"
                android:alpha="0.6"
                android:singleLine="true"
                android:layout_alignBottom="@+id/edit_chapter_content_container"
                android:id="@+id/edit_function_chapter_background"
                style="@style/Widget.AppCompat.Button.Colored"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:alpha="0.6"
                android:id="@+id/edit_chapter_content_text"
                android:layout_toRightOf="@id/edit_function_chapter_background"
                android:layout_alignBottom="@id/edit_chapter_content_container"
                android:text="@string/info_chapter_content_text"
                style="@style/Widget.AppCompat.Button.Colored"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:alpha="0.6"
                android:layout_toRightOf="@id/edit_chapter_content_text"
                android:layout_alignBottom="@id/edit_chapter_content_container"
                android:text="@string/info_action"
                android:id="@+id/edit_chapter_action"
                style="@style/Widget.AppCompat.Button.Colored"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:alpha="0.6"
                android:layout_toRightOf="@id/edit_chapter_action"
                android:layout_alignBottom="@id/edit_chapter_content_container"
                android:text="@string/info_chapter_title"
                android:id="@+id/edit_chapter_title"
                style="@style/Widget.AppCompat.Button.Colored"
        />
    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_return"
                android:id="@+id/create_cancel"
                style="@style/Widget.AppCompat.Button.Small"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_save"
                android:id="@+id/create_save"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_save_next"
                android:id="@+id/create_save_next"
        />
    </LinearLayout>
</LinearLayout>