<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:layout_gravity="fill_vertical"
        >

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_chapter_name"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minHeight="40dp"
                    android:id="@+id/chapter_name_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
            >
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_chapter_background"
                        android:gravity="center"
                        android:singleLine="true"
                        android:id="@+id/edit_function_chapter_background"
                        style="@style/Widget.AppCompat.Button.Colored"
                />
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:id="@+id/chapter_content_text"
                        android:text="@string/info_chapter_content_text"
                        style="@style/Widget.AppCompat.Button.Colored"
                />
            </LinearLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:singleLine="true"
                    android:id="@+id/chapter_next_chooser"
                    android:text="@string/function_add_next_chapters"
                    style="@style/Widget.AppCompat.Button.Colored"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
        >
            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            >
                <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/info_chapter_name"
                        android:minHeight="40dp"
                        android:id="@+id/chapter_name_edit"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
            >
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:hint="@string/info_chapter_content"
                        android:background="@drawable/story_background_1"
                        android:gravity="top|left"
                        android:id="@+id/chapter_content_edit"
                />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
                <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/function_next_chapters_scroll"
                >

                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_cancel"
                android:id="@+id/create_cancel"
                style="@style/Widget.AppCompat.Button.Small"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_save"
                android:id="@+id/create_save"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_save_next"
                android:id="@+id/create_save_next"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_quit"
                android:id="@+id/create_quit"
                style="@style/Widget.AppCompat.Button.Small"
        />
    </LinearLayout>
    <ImageSwitcher
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageSwitcher"/>

</LinearLayout>